# hydrognn-reproducibility

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCING.md  environment.yml  pyproject.toml  requirements.txt
datos-06-07-2023/: DatosHistoricos_580734_A284Z65QRIO1.csv  DatosHistoricos_580734_E001L65VEMBA.csv  DatosHistoricos_580734_E029Y65VEMBA.csv  DatosHistoricos_580734_E075E65VEMBA.csv  DatosHistoricos_580734_EM01L84PACUM.csv  DatosHistoricos_580734_EM06L84PACUM.csv  DatosHistoricos_580734_EM09L84PACUM.csv  DatosHistoricos_580734_EM11L84PACUM.csv  DatosHistoricos_580734_EM25T84PACUM.csv  DatosHistoricos_580734_EM29Y84PACUM.csv  DatosHistoricos_580734_EM30T84PACUM.csv  DatosHistoricos_580734_EM71T84PACUM.csv  DatosHistoricos_580734_EM75E84PACUM.csv  README.md
datos-synth/: README.md
datos-synth-N64/: README.md
docs/: DATA_LAYOUT.md  EXPERIMENT_MAP.md  MODEL_OVERVIEW.md
figs/: README.md
outputs/: README.md  ebro_headline_seed_robustness.csv  ebro_remediated_seed_robustness.csv  ensemble_decomposition.csv  ensemble_decomposition_outputs.csv  l_alpha_ebro_cost.csv  l_alpha_ebro_predictor.csv  l_alpha_sensitivity.csv  l_alpha_synth-N16_cost.csv  l_alpha_synth-N16_predictor.csv  l_alpha_synth-N64_cost.csv  l_alpha_synth-N64_predictor.csv  persistence_baseline.csv  uagnn_cost_ratio_sensitivity_reopt.csv  w4_decomp.csv  w4_decomp_outputs.csv  w4_summary.txt  w4_summary_outputs.txt
scripts/: README.md  analyze_blocks.py  analyze_cost_ratio_resweep.py  analyze_l_alpha.py  analyze_scenario_ensembles.py  analyze_w4_variance.py  compare_models.py  diag_e21_directions.py  diag_n64_collapse.py  evaluate_phase22_operating_cost.py  extract_formal_positions.py  (+22 more)
(+301 files in other folders)
